# simpleuv

./: CMakeLists.txt  LICENSE  README.md
cmake/: Findlibuv.cmake
src/: CMakeLists.txt
src/Example/: CMakeLists.txt
src/Example/Auth/: AuthConnection.cpp  AuthConnection.h  AuthServer.cpp  AuthServer.h  CMakeLists.txt  Main.cpp
src/Example/Shared/: CMakeLists.txt
src/Example/Shared/AuthToClient/: ACAuthResponsePacket.cpp  ACAuthResponsePacket.h  ACWorldCookiePacket.cpp  ACWorldCookiePacket.h  AuthToClientPacket.h  CMakeLists.txt
src/Example/Shared/ClientToAuth/: CAEnterWorldPacket.cpp  CAEnterWorldPacket.h  CARequestAuthPacket.cpp  CARequestAuthPacket.h  CMakeLists.txt  ClientToAuthPacket.h
src/Network/: CMakeLists.txt  INetPacket.h  PacketFunctor.h  PacketFunctorBase.h  PacketHandler.h  PacketQueueElem.h  PacketQueueElemBase.h
src/Network/Net/: CMakeLists.txt  INetHandler.h  NetConnection.cpp  NetConnection.h  NetManager.cpp  NetManager.h
src/Network/Serialize/: CMakeLists.txt  ISerialize.h  InputSerializer.h  OutputSerializer.h  SerializeTypes.h  Serializer.h
